dodałem footera h1 z tytyłami kontakt i cennik do nich niebieskiego diva nazwanego linia

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
                 <div class="container">
 
-                    <a class="page-logo" href="/">
+                    <a class="page-logo" href="">
                         <img src="http://placehold.it/110x25/E8117F/ffffff" width="110" height="25" alt="Sit On Chair" />
                     </a>
 
@@ -85,7 +85,7 @@
             <section class="pictures-list">
 
                 <div class="container">
-                    
+
                     <div class="picture-cnt">
                         <img src="images/box1_img.jpg" width="329" height="225" alt="" />
                         <div class="picture-cnt-description">
@@ -95,12 +95,17 @@
                             </div>
                         </div>
                     </div>
-                    
+
                 </div>
             </section><!-- e: pictures list -->
 
             <section class="price-list">
                 <div class="container">
+
+                      <h1 class="price-list-title">Cennik</h1>
+                    <div class="linia">
+
+                    </div>
 
                     <div class="price-list-cnt">
 
@@ -169,6 +174,10 @@
 
             <section class="contact-us">
                 <div class="container">
+                  <h1 class="price-list-title">Kontakt</h1>
+                <div class="linia">
+
+                </div>
                     <form class="contact-us-form" method="POST" action="">
                         <div class="contact-us-form-left">
                             <div>
@@ -202,6 +211,39 @@
             </section><!-- e: countact-us -->
 
         </div>
+
+        <footer>
+                <div class="container">
+                            <div class="footer_parent">
+                                          <div class="footer_text">
+                                            <p>Copyright 2014 | All Rights Reserved. - Sit On Chair</p>
+                                          </div>
+                                          <div class="footer_icons">
+                                                    <a class="footer_flickr_logo" href="#">
+                                                          <img src="images/flickr.png" width="35"height="35" alt=""></a>
+
+
+                                                    <a class="footer_vimeo_logo" href="">
+                                                        <img src="images/vimeo.png" width="35"height="35" alt=""></a>
+
+
+                                                    <a class="footer_pinterest_logo" href="">
+                                                        <img src="images/pinterest.png" width="35"height="35" alt=""></a>
+
+
+                                                    <a class="footer_twitter_logo" href="">
+                                                        <img src="images/twitter.png" width="35"height="35"alt=""></a>
+
+
+                                                    <a class="footer_page_logo" href="">
+                                                        <img src="http://placehold.it/110x25/E8117F/ffffff" width="110" height="25" alt="Sit On Chair" />
+                                                    </a>
+                                          </div>
+                            </div>
+                </div>
+        </footer>
+
+
 
     </body>
 </html>
