dodałem kółka do price boxów i zmieniłem nazwy priceboxów

--- a/index.html
+++ b/index.html
@@ -110,6 +110,10 @@
                     <div class="price-list-cnt">
 
                         <div class="price-list-box">
+                          <div class="price-list-circle1">
+                              <div class="price-list-circle2">
+                              </div>
+                          </div>
                             <h2 class="price-list-box-title">Basic plan</h2>
                             <div class="price-list-box-price">
                                 <strong class="price-cnt">
@@ -128,7 +132,11 @@
                         </div><!-- e: price-list-box -->
 
                         <div class="price-list-box active">
-                            <h2 class="price-list-box-title">Basic plan</h2>
+                          <div class="active-price-list-circle1">
+                              <div class="active-price-list-circle2">
+                              </div>
+                          </div>
+                            <h2 class="price-list-box-title">Standard Plan</h2>
                             <div class="price-list-box-price">
                                 <strong class="price-cnt">
                                     <span class="price">95</span>
@@ -147,7 +155,11 @@
                         </div><!-- e: price-list-box -->
 
                         <div class="price-list-box">
-                            <h2 class="price-list-box-title">Basic plan</h2>
+                          <div class="price-list-circle1">
+                              <div class="price-list-circle2">
+                              </div>
+                          </div>
+                            <h2 class="price-list-box-title">Advance plan</h2>
                             <div class="price-list-box-price">
                                 <strong class="price-cnt">
                                     <span class="price">211</span>
