--- a/index.html
+++ b/index.html
@@ -57,19 +57,25 @@
                             <div class="main-slider-cnt">
                                 <!-- tutaj trafia slajdy pozycjonowane absolutenie -->
 
-                                <div class="main-slider-slide">
-                                    <h1>lorem ipsum</h1>
+                                <div class="main-slider-slide1">
+                                    <img class="main-slider-slide1-img" src="images/black_chair.png" alt>
+                                        <div class="main-slider-slide1-right">
+                                          <h1 class="main-slider-slide1-h1">Sit <span class="span1">on</span> our <span class="span2">chair</span></h1>
+                                          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                                          <a type="submit" class="btn slide1_button ">zobacz więcej</a>
+                                        </div>
                                 </div>
-                                <div class="main-slider-slide">
+
+                                <div class="main-slider-slide2">
                                     <h1>lorem ipsum dasd asd </h1>
                                 </div>
-                                <div class="main-slider-slide">
+                                <div class="main-slider-slide3">
                                     <h1>dasdasdasdasd ipsum</h1>
                                 </div>
-                                <div class="main-slider-slide">
+                                <div class="main-slider-slide4">
                                     <h1>lordasdasdasdasdem ipsum</h1>
                                 </div>
-                                <div class="main-slider-slide">
+                                <div class="main-slider-slide5">
                                     <h1>lordasdasdasdem ipsum</h1>
                                 </div>
 
@@ -81,21 +87,49 @@
                     <!-- e: slider -->
                 </div>
             </div>
-
+              <!-- pictures-list-->
             <section class="pictures-list">
 
                 <div class="container">
+                  <div class="pictures-list-parent">
 
                     <div class="picture-cnt">
                         <img src="images/box1_img.jpg" width="329" height="225" alt="" />
                         <div class="picture-cnt-description">
-                            <h3 class="picture-cnt-title">jakis tytul</h3>
+                            <h3 class="picture-cnt-title">Chair CLAIR</h3>
+                            <div class="picture-linia">
+                            </div>
                             <div class="picture-cnt-text">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. In libero arcu, vulputate sit amet
                             </div>
                         </div>
                     </div>
 
+                    <div class="picture-cnt">
+                        <img src="images/box2_img.jpg" width="329" height="225" alt="" />
+                        <div class="picture-cnt-description">
+                            <h3 class="picture-cnt-title">Chair MARGARITA</h3>
+                            <div class="picture-linia">
+                            </div>
+                            <div class="picture-cnt-text">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. In libero arcu, vulputate sit amet
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="picture-cnt">
+                        <img src="images/box1_img.jpg" width="329" height="225" alt="" />
+                        <div class="picture-cnt-description">
+                            <h3 class="picture-cnt-title">Finds all inputs</h3>
+                            <div class="picture-linia">
+                            </div>
+                            <div class="picture-cnt-text">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. In libero arcu, vulputate sit amet
+                            </div>
+                        </div>
+                    </div>
+
+                  </div>
                 </div>
             </section><!-- e: pictures list -->
 
@@ -150,7 +184,7 @@
                                 <li>Gwarancja 5 lat</li>
                             </ul>
                             <div class="price-list-box-btn-cnt">
-                                <a href="" class="btn price-list-box-btn">Dołącz</a>
+                                <a href="" class="active-price-list-btn">Dołącz</a>
                             </div>
                         </div><!-- e: price-list-box -->
 
